# Blobwar_api

./: .gitignore  CMakeLists.txt  Makefile  README.md  negamax_config.ini  readme.txt  setupenv.sh
.claude/: MEMORY.md  Project.md  architecture.md  claude.md  clinerules.md  security.md  tasks.md  workflow.md
.claude/memory/: project_context.md  workflow_rules.md
.claude/tasks/: lessons.md  task1_dynamic_ai.txt  task2_optimizer_rewrite.txt  task3_negamax_par_inc_dyn_rebuild.txt  todo.md
ai_stub/: main.cpp
bench/: BenchAPI.cpp  BenchAPI.hpp  README.md  main.cpp
data_gen/: main.cpp
optimizer/: Optimizer.cpp  Optimizer.hpp  main.cpp
src/ai/: AIBase.hpp  AIProcess.cpp  AIProcess.hpp  BBState.cpp  BBState.hpp
src/ai/AlphaBeta/: AlphaBetaAI.cpp  AlphaBetaAI.hpp
src/ai/Eval/: CNNEval.cpp  CNNEval.hpp  CNNTrainer.cpp  CNNTrainer.hpp  Eval.cpp  Eval.hpp  GameRecord.hpp  Zobrist.hpp
src/ai/Negamax/: NegamaxAI.cpp  NegamaxAI.hpp
src/ai/NegamaxParDyn/: NegamaxParDynAI.cpp  NegamaxParDynAI.hpp
src/ai/NegamaxParInc/: IncMoveState.hpp  IncState.hpp  NegamaxConfig.hpp  NegamaxParIncAI.cpp  NegamaxParIncAI.hpp  NegamaxParIncAIDYN.hpp  NegamaxParIncAIDynStud.hpp  NegamaxParIncAIDynStudPMR.hpp  NegamaxParIncAIDynStudPMR_LMR2.hpp  NegamaxParIncAIDynStudRandom.hpp  NegamaxParIncAIStud.hpp  NegamaxYBWDynAI.hpp
src/ai/NegamaxParallel/: NegamaxParallelAI.cpp  NegamaxParallelAI.hpp
src/ai/NegamaxVariants/Parallelsearch/: Parallelsearch.hpp
src/ai/NegamaxVariants/YBWsearch/: YBWsearch.hpp
src/ai/NegamaxVariants/YBWsearchDYN/: YBWsearchDYN.hpp
src/ai/NegamaxVariants/YBWsearchZobrist/: YBWsearchZobrist.hpp  YBWsearchZobristDYN.hpp
src/ai/NegamaxVariants/YBWsearchnoatomic/: YBWsearchnoatomic.hpp
src/ai/NegamaxVariants/YBWsearchnotri/: YBWsearchnotri.hpp
src/ai/NegamaxVariants/YBWsearchtrinoYBW/: YBWsearchtrinoYBW.hpp
src/ai/NegamaxYBW/: NegamaxYBWAI.cpp  NegamaxYBWAI.hpp
src/ai/Random/: RandomAI.cpp  RandomAI.hpp
src/engine/: Board.cpp  Board.hpp  MoveGen.cpp  MoveGen.hpp  Rules.cpp  Rules.hpp
src/ui/: App.cpp  App.hpp  InputHandler.hpp  Renderer.cpp  Renderer.hpp
training/: README.md  dataset.py  export_weights.py  model.py  train.py
